# optimisation_talk

./: .gitignore  pyproject.toml
optimisation/genetic_algorithm/: data_generator.py  ga_optimisation.py  square_root.py  visualizations.py
optimisation/linear_programming/: integer_linear_programing.py  milp.py
optimisation/multi-agent-rl/trial3/: compute_rewards.py  environment.py  evaluate.py  mappo_training.py  run_diagnostics.py
optimisation/multi-agent-rl/trial4/: 01_simplistic_mappo_training.py  02_mappo_train_boosted.py  aggressive_mappo_training.py  compute_rewards.py  data_simulator.py  environment.py
optimisation/reinforcement_learning/: PPO_training_RL.py  data_generator.py  evaluate.py  evaluate_flight_scheduler.py  flight_scheduling_env.py  flight_scheduling_env2.py  prep_data_for_RL.py  trial1.py  visual.py  visualizations.py
optimisation/reinforcement_learning/data_sim/: opt_params.json
optimisation/reinforcement_learning/data_sim_eval/: opt_params.json
optimisation/reinforcement_learning/ppo_logs/PPO_1/: events.out.tfevents.1748275352.Karthikas-MacBook-Pro.local.40329.0
optimisation/reinforcement_learning/ppo_logs/PPO_2/: events.out.tfevents.1748275367.Karthikas-MacBook-Pro.local.40339.0
optimisation/reinforcement_learning/ppo_logs/PPO_3/: events.out.tfevents.1748322555.Karthikas-MacBook-Pro.local.42028.0
optimisation/reinforcement_learning/ppo_logs/PPO_4/: events.out.tfevents.1748336305.Karthikas-MacBook-Pro.local.46242.0
(+4 files in other folders)
