[tool.poetry]
name = "optimisation"
version = "0.1.0"
description = ""
authors = ["Sujit Kamthe <sujitk@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^3.1.1"
pandas = "^2.2.3"
prettytable = "^3.16.0"
gym = "^0.26.2"
stable-baselines3 = "^2.6.0"
numpy = "^2.2.6"
seaborn = "^0.13.2"
leap-ec = "^0.8.2"
tensorboard = "^2.19.0"
ray = {extras = ["rllib"], version = "^2.47.1"}
wandb = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
